--- a/CSS Flags/Madagascar/style.css
+++ b/CSS Flags/Madagascar/style.css
@@ -1,8 +1,13 @@
 
 .madagascar{
-    margin left: 250px;
+    padding-left: 200px;
+    margin-top: 50px;
+    margin-left: 293px;
+    margin-right: 475px;
+    border-color: lightgrey;
+    border-style: solid;
+    border-width: 
 }
-
 .red{
     display: block;
     background-color: #FC3D32;
