--- a/CSS Flags/France/style.css
+++ b/CSS Flags/France/style.css
@@ -4,7 +4,8 @@
     width: 300px;
     background-color: #001489;
     margin-top: 50px;
-    margin-left: 260px;
+    left: 200px;
+    position: relative;
 }
 .white{
     display: inline-block;
@@ -12,6 +13,8 @@
     width: 300px;
     background-color:#FFFFFF;
     margin-top: 50px;
+    left: 200px;
+    position: relative;
 }
 .red{
     display: inline-block;
@@ -19,4 +22,6 @@
     height: 600px; 
     width: 300px;
     margin-top: 50px;
+    left: 200px;
+    position: relative;
 }
