--- a/CSS Flags/Maldives/style.css
+++ b/CSS Flags/Maldives/style.css
@@ -4,6 +4,7 @@
     width: 800px;
     margin-top: 50px;
     margin-left: 330px;
+    position: relative;
 }
 .green{
     background-color: rgb(0,126,58);
