ES6 Practice - Let, Const, Arrow Functions, Default Arguments, Template Literals

--- a/DJ CSS/style.css
+++ b/DJ CSS/style.css
@@ -100,8 +100,7 @@
 .block6:hover{
     box-shadow: 10px 5px 5px red;
     background-color: grey;
-    text-align: centergit ;
-    
+    text-align: center;
 }
 
 
