--- a/CSS Zen Garden /style.css
+++ b/CSS Zen Garden /style.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(6, 400px);
+    grid-template-rows: repeat(9, 400px);
     /* give the container display grid */
     /* with six rows, 50px high */
     /* default all cells/children on the right be 2/3 the screen width, and all on the left 1/3 */
@@ -9,11 +9,13 @@
 .header{
     grid-column: 1 / 3;
     grid-row: 1/ 2;
+    background-color: rgb(74,120,104);
 }
 
 .view{
     grid-column: 3 / 4 ;
     grid-row: 1 / 2;
+    background-color: rgb(74,120,104);
 }
 
 .enlightenment{
@@ -26,20 +28,51 @@
 }
 
 .authors {
-    background-color: lightcoral;
+    background-color: rgb(229,237,232);
     grid-column: 3 / 4;
     grid-row: 2 / 4;
 }
-.links {
-    background-color: lightpink;
-    grid-column: 3 /4;
-    grid-row: 4 / 5;
+
+.participation{
+    grid-column: 1 / 3;
+    grid-row: 4 / 6;
+    background-color: rgb(173,195,183);
 }
 
-.footer {
-    /* make these span the width of the page */
-    background-color: aquamarine;
+.links {
+    background-color:rgb(165,190,176);
+    grid-column: 3 /4;
+    grid-row: 4 / 6;
 }
+
+.requirements{
+    grid-column: 1 / 3;
+    grid-row: 6 / 8 ;
+    background-color: rgb(255,255,255);
+}
+
+.empty{
+    grid-column: 3 / 4;
+    grid-row: 6 / 8 ;
+    background-color: rgb(229,237,232);
+}
+
+.footer1 {
+    display: grid;
+    background-color:  rgb(74,120,104);
+    grid-column: 1 /4;
+    grid-row: 8 / 9;
+} 
+
+
+.footer2 {
+    /* make these span the width of the page */
+    background-color: rgb(19,67,71);
+    display: grid;
+    grid-column: 1 / 4;
+    grid-row: 9 / 10;
+} 
+
 
 @media (max-width: 900px){
     /* use this media query to help these two cells drop to the bottom when screens are smaller */
