--- a/CSS Zen Garden /style.css
+++ b/CSS Zen Garden /style.css
@@ -10,17 +10,26 @@
     grid-column: 1 / 3;
     grid-row: 1/ 2;
     background-color: rgb(74,120,104);
+    color: white;
+    font-family:'Times New Roman', Times, serif;
 }
 
 .view{
     grid-column: 3 / 4 ;
     grid-row: 1 / 2;
     background-color: rgb(74,120,104);
+    color: white;
 }
 
 .enlightenment{
     grid-column: 1/ 3;
     grid-row: 2 / 4;
+    color: rgb(50,80,80);
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    padding-top: 10px;
+    padding-right: 60px;
+    padding-left: 60px;
 }
 
 .container > div {
@@ -31,24 +40,43 @@
     background-color: rgb(229,237,232);
     grid-column: 3 / 4;
     grid-row: 2 / 4;
+    color: rgb(50,80,80);
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .participation{
     grid-column: 1 / 3;
     grid-row: 4 / 6;
     background-color: rgb(173,195,183);
+    color: rgb(50,80,80);
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    padding-top: 10px;
+    padding-right: 60px;
+    padding-left: 60px;
 }
 
 .links {
     background-color:rgb(165,190,176);
     grid-column: 3 /4;
     grid-row: 4 / 6;
+    color: rgb(50,80,80);
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .requirements{
     grid-column: 1 / 3;
     grid-row: 6 / 8 ;
     background-color: rgb(255,255,255);
+    font-size: 22px;
+    color: rgb(50,80,80);
+    font-family: 'Times New Roman', Times, serif;
+    padding-top: 10px;
+    padding-left:60px;
+    padding-right: 60px;
+    
 }
 
 .empty{
@@ -62,6 +90,8 @@
     background-color:  rgb(74,120,104);
     grid-column: 1 /4;
     grid-row: 8 / 9;
+    text-align: center;
+    color: rgb(137,163,160);
 } 
 
 
@@ -77,8 +107,14 @@
 @media (max-width: 900px){
     /* use this media query to help these two cells drop to the bottom when screens are smaller */
     .authors {
-         
+        background-color: rgb(229,237,232);
+        grid-column: 3 / 4;
+        grid-row: 2 / 4;
+        color: rgb(50,80,80);
+        font-size: 20px;
+        font-family: 'Times New Roman', Times, serif;
     }
+    
     .links {
 
     }
@@ -87,6 +123,10 @@
         
     }
 }
+
+
+
+
 
 /* FLEX */
 /* use flexbox to make the icons behave like css zen garden's social icons */
